updated yml to force install

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,11 +21,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install
-          npm install -D allure-playwright allure-commandline
+          npm install --force
+          npm install -D allure-playwright allure-commandline --force
 
       - name: Install Playwright browsers
-        run: npx playwright install --with-deps
+        run: npx playwright install --with-deps --force
 
       - name: Run Playwright tests with Allure
         run: npx playwright test --reporter=line,allure-playwright
