--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -10,6 +10,12 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    env:
+      BASE_URL: http://www.uitestingplayground.com
+      STAGING_BASE_URL: https://automationexercise.com
+      API_BASE: https://reqres.in/api
+      API_KEY: ${{ secrets.API_KEY }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -18,11 +24,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
 
       - name: Install dependencies
-        run: |
-          npm install --force
-          npm install -D allure-playwright allure-commandline --force
+        run: npm ci
+
+      - name: Install Allure tooling
+        run: npm i -D allure-playwright allure-commandline
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps --force
@@ -31,11 +39,19 @@ jobs:
         run: npx playwright test --reporter=line,allure-playwright
 
       - name: Generate Allure Report
+        if: always()
         run: npx allure generate allure-results --clean -o allure-report
 
-      - name: Upload Allure report as artifact
+      - name: Upload Allure report
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
-          path: allure-report
+          path: allure-report/
+
+      - name: Upload Allure results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-results
+          path: allure-results/
