reverted yaml changes

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -27,10 +27,9 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
-
-      - name: Install Allure tooling
-        run: npm i -D allure-playwright allure-commandline
+        run: |
+          npm install --force
+          npm install -D allure-playwright allure-commandline --force
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps --force
