--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "npx playwright test",
     "test:dev": "npx playwright test --project=dev",
+    "test:dev:env": "dotenv -e .env.dev -- npx playwright test --project=dev",
     "test:staging": "npx playwright test --project=staging",
     "test:api": "npx playwright test --project=api",
     "pw:report": "npx playwright show-report",
