--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,11 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Playwright and test artifacts
+allure-report/
+allure-results/
+playwright-report/
+test-results/
+*.trace.zip
+allure-history/
