--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Install deps and browsers
         run: |
-          npm ci
+          npm ci --no-optional
           npx playwright install --with-deps
 
       - name: Print versions
@@ -80,11 +80,11 @@ jobs:
           retention-days: 7
 
       - name: Generate Allure report
-        if: always()
-        run: npx allure generate allure-results --clean -o allure-report
+        if: always() && hashFiles('allure-results/**') != ''
+        run: npx -y allure-commandline generate allure-results --clean -o allure-report
 
       - name: Upload Allure report
-        if: always()
+        if: always() && hashFiles('allure-results/**') != ''
         uses: actions/upload-artifact@v4
         with:
           name: allure-report-${{ matrix.browser }}-${{ matrix.shardIndex }}
@@ -93,7 +93,7 @@ jobs:
           retention-days: 7
 
       - name: Upload Allure results
-        if: always()
+        if: always() && hashFiles('allure-results/**') != ''
         uses: actions/upload-artifact@v4
         with:
           name: allure-results-${{ matrix.browser }}-${{ matrix.shardIndex }}
