--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "test:staging": "npx playwright test --project=staging",
     "test:api": "npx playwright test --project=api",
     "pw:report": "npx playwright show-report",
+    "report:html": "npx playwright show-report",
     "allure-report": "allure generate allure-results --clean -o allure-report && allure open allure-report",
     "allure:serve": "allure serve allure-results",
     "allure:clean": "rm -rf allure-results",
     "test:headed": "npx playwright test --headed",
     "test:debug": "npx playwright test --debug",
-    "allure:test": "npm run allure:clean && npx playwright test"
+    "allure:test": "npm run allure:clean && npx playwright test",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier -w ."
   },
   "repository": {
     "type": "git",
@@ -31,10 +34,15 @@
   "devDependencies": {
     "@faker-js/faker": "^10.0.0",
     "@playwright/test": "^1.55.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@types/node": "^24.3.0",
     "allure-commandline": "^2.34.1",
     "allure-playwright": "^3.3.3",
-    "dotenv-cli": "^10.0.0"
+    "dotenv-cli": "^10.0.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "prettier": "^3.3.3"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
