--- a/package.json
+++ b/package.json
@@ -34,15 +34,16 @@
   "devDependencies": {
     "@faker-js/faker": "^10.0.0",
     "@playwright/test": "^1.55.0",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "@typescript-eslint/parser": "^8.7.0",
     "@types/node": "^24.3.0",
     "allure-commandline": "^2.34.1",
     "allure-playwright": "^3.3.3",
     "dotenv-cli": "^10.0.0",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
