--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -104,19 +104,22 @@ jobs:
         run: npx -y allure-commandline generate allure-results --clean -o allure-report
 
       - name: Setup Pages
-        if: always() && hashFiles('allure-report/**') != ''
+        if: github.ref == 'refs/heads/main' && always() && hashFiles('allure-report/**') != ''
         uses: actions/configure-pages@v5
-
+        
       - name: Upload Pages artifact
-        if: always() && hashFiles('allure-report/**') != ''
+        if: github.ref == 'refs/heads/main' && always() && hashFiles('allure-report/**') != ''
+        id: upload-pages
         uses: actions/upload-pages-artifact@v3
         with:
           path: allure-report
 
       - name: Deploy to GitHub Pages
-        if: always() && hashFiles('allure-report/**') != ''
+        if: github.ref == 'refs/heads/main' && always() && hashFiles('allure-report/**') != ''
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          artifact_id: ${{ steps.upload-pages.outputs.artifact_id }}
 
       - name: Upload Allure report
         if: always() && hashFiles('allure-results/**') != ''
