Updated assertions of UI tests

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -106,10 +106,11 @@ jobs:
       - name: Setup Pages
         if: github.ref == 'refs/heads/main' && always() && hashFiles('allure-report/**') != ''
         uses: actions/configure-pages@v5
+        with:
+          enablement: true
         
       - name: Upload Pages artifact
         if: github.ref == 'refs/heads/main' && always() && hashFiles('allure-report/**') != ''
-        id: upload-pages
         uses: actions/upload-pages-artifact@v3
         with:
           path: allure-report
@@ -118,8 +119,6 @@ jobs:
         if: github.ref == 'refs/heads/main' && always() && hashFiles('allure-report/**') != ''
         id: deployment
         uses: actions/deploy-pages@v4
-        with:
-          artifact_id: ${{ steps.upload-pages.outputs.artifact_id }}
 
       - name: Upload Allure report
         if: always() && hashFiles('allure-results/**') != ''
